--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^9.4.2",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "use-sound": "^1.0.2",
     "webpack": "^4.43.0"
   },
   "devDependencies": {
