--- a/website/package.json
+++ b/website/package.json
@@ -8,18 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@svgr/webpack": "^5.4.0",
-    "@zeit/next-css": "^1.0.1",
-    "firebase": "^7.14.5",
-    "next": "^9.4.2",
-    "react": "^16.13.1",
-    "react-dom": "16.13.1",
-    "use-sound": "^1.0.2",
-    "webpack": "^4.43.0"
+    "@svgr/webpack": "^5.5.0",
+    "firebase": "^8.1.1",
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "use-sound": "^2.0.1",
+    "webpack": "^5.7.0"
   },
   "devDependencies": {
-    "file-loader": "^6.0.0",
-    "raw-loader": "^4.0.1",
-    "url-loader": "^4.1.0"
+    "file-loader": "^6.2.0",
+    "raw-loader": "^4.0.2",
+    "url-loader": "^4.1.1",
+    "yarn-upgrade-all": "^0.5.4"
   }
 }
