--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,8 @@
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
+    "react-markdown": "^5.0.3",
     "use-sound": "^2.0.1",
     "webpack": "^5.7.0"
   },
